roll back image invisibility fix

--- a/src/components/2_repairs/repairs.scss
+++ b/src/components/2_repairs/repairs.scss
@@ -70,9 +70,6 @@
 .checked {
   background: black;
 }
-.hidden {
-  display: none;
-}
 
 .checkboxes.error .checkbox > div {
   border: 1px solid red;
